# code_context

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: app.rs  context.rs  lib.rs  main.rs
src/app/: config.rs  scanner.rs
src/code_context/: __init__.py  __main__.py  code_dataset.json  config.py  default_presets.toml  func_parse.py  parse.py  train.py
tests/: test_main.py  test_parse.py
