[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code_context"
version = "0.5.0"
dependencies = [
  "pathspec==0.12.1",
  "tomli"
]

[project.scripts]
code_context = "code_context.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
